DevOps/Worksheets/k8s/example-working-apps/kubernetes-manifests/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: my-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: numbers.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: two-thousand-fourty-eight
                port:
                  number: 80
    - host: solitaire.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solitaire-service
                port:
                  name: http
